# Creditra-Contracts

./: AUCTION_CLOSE_TIME_FIX.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  Cargo.toml  PR_218_DESCRIPTION.md  PR_DESCRIPTION_DRAW_LIQUIDITY.md  PR_DESCRIPTION_STORAGE_AUDIT.md  SELF_SUSPEND_ARCHITECTURE.md  SELF_SUSPEND_FEATURE_SUMMARY.md  deny.toml  test_accrual_standalone.rs  test_cargo_deny.sh
.cargo/: config.toml
.github/workflows/: cargo-deny.yml
contracts/credit/src/: accrual.rs  accrual_tests.rs  amount_validation_tests.rs  auth.rs  boundary_tests.rs  collateral.rs  config.rs  freeze.rs  lib.rs  lifecycle.rs  limit_decrease_tests.rs  math_utils.rs  query.rs  risk.rs  risk_formula_tests.rs  storage.rs  types.rs
contracts/credit/tests/: BORROWER_SELF_SUSPEND_IMPLEMENTATION.md  SELF_SUSPEND_TEST_PLAN.md  accrual_overflow_audit.rs  batch_accrual.rs  borrower_self_suspend.rs  circuit_breaker.rs  contract_version.rs  coverage_edge_cases.rs  credit_auction_e2e.rs  debt_monotonic_invariant.rs  default_liquidation_auction_hook.rs  default_liquidation_settled_event.rs  draw_cooldown_boundary.rs  duplicate_open_policy.rs  enumerate_credit_lines.rs  error_discriminants.rs  freeze_draws.rs  get_credit_line.rs  global_exposure.rs  init_idempotency.rs  monotonic_timestamps.rs  open_credit_line.rs  repayment_schedule.rs  state_transition_invariants.rs  storage_ttl.rs  token_failure_rollback.rs  utilization_cap_interaction.rs
docs/: INDEX.md  contributing-tests.md  credit.md  errors.md  interest-accrual-design.md
scripts/: build_wasm.sh
(+5 files in other folders)
