[workspace]
# Resolver "2" is required for Soroban contracts: it disables feature
# unification across the cdylib and rlib targets that ship the contract WASM.
resolver = "2"

members = [
    # The credit-line contract is the primary protocol entrypoint.
    "contracts/credit",
    # The auction contract is consumed as a dev-dependency by credit tests
    # to exercise the default-liquidation hook.
    "gateway-contract/contracts/auction_contract",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[workspace.dependencies]
soroban-sdk = "22"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
